[tool.poetry]
name = "recursive-computation"
version = "0.1.0"
description = "Web service that compute the result of some recursive functions"
authors = ["Jorge Florian <jafn28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.902"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
